# stonectl

./: .gitignore  .gitmodules  CMakeLists.txt
.github/: main.workflow
src/: decompress.hpp  main.cpp  utils.hpp
